# giraffe_demo

./: IMPLEMENTATION_GUIDE.md  README.md
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/scripts/: run_dev.py
backend/src/app/: __init__.py  main.py  main_simple.py
backend/src/app/api/: deps.py
backend/src/app/api/v1/: __init__.py  auth.py  demo.py  projects.py  users.py  websocket.py
backend/src/app/core/: __init__.py  config.py  logging.py  security.py
backend/src/app/db/: session.py
backend/src/app/models/: __init__.py  base.py  project.py  user.py
backend/src/app/schemas/: __init__.py  project.py  user.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/layout/: LayerPanel.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/viewer/: 2DViewer.tsx  3DViewer.tsx  GiraffeViewer.tsx  ViewerControls.tsx
frontend/src/lib/: api.ts  giraffe.ts  store.ts
