[project]
name = "giraffe-demo-backend"
version = "0.1.0"
description = "Scalable FastAPI backend for Giraffe SDK demo application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Core FastAPI and ASGI
    "fastapi[all]>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    
    # Database and ORM
    "sqlalchemy>=2.0.23",
    "alembic>=1.12.1",
    "psycopg2-binary>=2.9.9",
    "asyncpg>=0.28.0",
    "geoalchemy2>=0.14.2",
    
    # Data validation and serialization
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Authentication and security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    
    # Async support and caching
    "redis>=5.0.1",
    "aioredis>=2.0.1",
    
    # Environment and configuration
    "python-dotenv>=1.0.0",
    
    # HTTP client for external APIs
    "httpx>=0.25.2",
    
    # WebSocket support
    "websockets>=12.0",
    
    # Logging and monitoring
    "structlog>=23.2.0",
    
    # Development and debugging
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "httpx>=0.25.2",  # for testing FastAPI
    
    # Code quality
    "ruff>=0.1.6",
    "black>=23.11.0",
    "mypy>=1.7.1",
    
    # Database testing
    "pytest-postgresql>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 88
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
    "B008", # do not perform function calls in argument defaults
    "C901", # too complex
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
